--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,35 +68,35 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2021 ERE - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2021 ERE - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<div>
+					<!--<div>
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Roteiro_Trabalho2.pdf"> Roteiro de Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_trabalho_1.pdf"> Notas do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_trabalho_1.pdf"> Notas do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div> 
+					</div> -->
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(30/06)</b> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
-					<li>Trabalho 2 - 70 pts <b>(28/07)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
+					<li>Trabalho 1 - 30 pts <!--<b>(30/06)</b> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a>--></li>
+					<li>Trabalho 2 - 70 pts <!--<b>(28/07)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a>--></li>
 					<!--<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
 					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 28/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<ul>
-					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 10 pts <b>(28/07)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
-					<li><u>Fase 2:</u> Apresentação do Sistema  - 60 pts <b>(01/09)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li> 
+					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 10 pts <!--<b>(28/07)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
+					<li><u>Fase 2:</u> Apresentação do Sistema  - 60 pts <!--<b>(01/09)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li> 
 					<!-- <li><i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas do Trabalho 2 (Fase 1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
 					</ul>
 					</ul> 
@@ -121,8 +121,8 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a><!--</button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
