--- a/poo.html
+++ b/poo.html
@@ -68,36 +68,36 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2021 ERE - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2021 ERE - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<div>
+					<!--<div>
 					<b>Plano:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático</a></li>
 					</ul>
-					</div> 
+					</div>-->
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(15/06)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(20/07)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 05, 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(31/08)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)</li>
-					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(20/07)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<!--<li>Lista 01 - 7,5 pts <b>(20/07)</b> </li>-->
-					<!-- <li>Lista 02 - 7,5 pts <b>(31/08)</b> </li>-->
-					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(31/08)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 			
+					<li>Prova 1 - 25 pts <!--<b>(15/06)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03 e 04 </i>)--></li>
+					<li>Prova 2 - 30 pts <!--<b>(20/07)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 05, 06, 07 e 08 </i>)--></li>
+					<li>Prova 3 - 30 pts <!--<b>(31/08)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)--></li>
+					<!--<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(20/07)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>-->
+					<li>Lista 01 - 7,5 pts <!--<b>(20/07)</b>--></li>
+					<li>Lista 02 - 7,5 pts <!--<b>(31/08)</b>--></li>
+					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(31/08)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->			
 					</ul>
 					</div>  
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)</li>
