--- a/poo-lab.html
+++ b/poo-lab.html
@@ -75,13 +75,13 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<!--<div>
+					<div>
 					<b>Monitoria:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
 					</ul>
-					</div>-->
+					</div>
 					<!--<div>
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
