--- a/gsi526.html
+++ b/gsi526.html
@@ -78,19 +78,19 @@
 					<div>
 					<b>Plano e Temas:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático</a></li>-->
-					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2021.pdf"> Temas de TCC (2021-2)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático</a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2021.pdf"> Temas de TCC</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> 
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <!-- <b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i>--></li>
-					<li>Prova 2 - 30 pts <!--<b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i>--></li>
-					<li>Prova 3 - 30 pts <!--<b>(06/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
-					<li>Lista 1 - 5 pts <!--<b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 2 - 5 pts <!--<b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 3 - 5 pts <!--<b>(06/09)</b> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Prova 1 - 25 pts <b>(02/12)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i>--></li>
+					<li>Prova 2 - 30 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i>--></li>
+					<li>Prova 3 - 30 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
+					<li>Lista 1 - 5 pts <b>(02/12)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 2 - 5 pts <b>(10/01)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 3 - 5 pts <b>(17/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
 					</div> 
 					<div>
