--- a/poo.html
+++ b/poo.html
@@ -86,11 +86,11 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(23/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
 					<li>Prova 2 - 30 pts <b>(11/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 05, 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(22/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)--></li>
+					<li>Prova 3 - 30 pts <b>(08/02)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)--></li>
 					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(11/01)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li>Lista 01 - 7,5 pts <b>(11/01)</b></li>-->
-					<li>Lista 02 - 7,5 pts <b>(22/02)</b></li>
-					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(31/08)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->			
+					<!--<li>Lista 02 - 7,5 pts <b>(08/02)</b></li>-->
+					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(08/02)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>			
 					</ul>
 					</div>  
 					<b>Material:</b> 
@@ -102,10 +102,10 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li> 
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/g4DSfdpz0d4"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)</li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/g4DSfdpz0d4"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=2_cv_UWmumY"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
